--- a/gradle.properties
+++ b/gradle.properties
@@ -4,14 +4,15 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.20.1
-yarn_mappings=1.20.1+build.10
-loader_version=0.14.22
+minecraft_version=1.20.5
+yarn_mappings=1.20.5+build.1
+loader_version=0.15.10
 
 # Mod Properties
-mod_version=1.0.1-1.20.1
+mod_version=1.0.1-1.20.5
 maven_group=com.hyerodrimm.horsearmorstandmod
 archives_base_name=horsearmorstandmod
 
 # Dependencies
-fabric_version=0.87.0+1.20.1
+fabric_version=0.97.7+1.20.5
+geckolib_version=4.5
