Swap everything from horse to wolf

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,9 +9,9 @@ yarn_mappings=1.20.5+build.1
 loader_version=0.15.10
 
 # Mod Properties
-mod_version=1.0.1-1.20.5
-maven_group=com.hyerodrimm.horsearmorstandmod
-archives_base_name=horsearmorstandmod
+mod_version=1.0.0-1.20.5
+maven_group=com.hyerodrimm.wolfarmorstandmod
+archives_base_name=wolfarmorstandmod
 
 # Dependencies
 fabric_version=0.97.7+1.20.5
